2006-01-19  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-resizer.c: Remove unnecessary -size argument.
	  Patch by Paul W. Frields <stickster@gmail.com>

2006-01-19  Jürg Billeter  <j@bitron.ch>

	* po/ru.po: Updated Russian translation by
	Tchak <polo@tchak.net>

2005-10-17  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Added "ru" to ALL_LINGUAS.
	* po/POTFILES.in: Added dialog to list of translatable files.
	* po/ru.po: Added Russian translation by
	Tchak <polo@tchak.net>
	* configure.ac: Bump version to 0.0.5

2005-10-10  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-resizer.c: unescape new file name
	* configure.ac: Bump version to 0.0.4

2005-10-10  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Added "it" to ALL_LINGUAS.
	* po/it.po: Added Italian translation by
	Stefano Fabri <bluefuture@email.it>

2005-08-29  Jürg Billeter  <j@bitron.ch>

	* Makefile.am: dist intltool files
	* configure.ac: Bump version to 0.0.3

2005-08-28  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-resizer.c: fix glade file path
	* src/Makefile.am: dist and install glade file
	* configure.ac: Bump version to 0.0.2