@@ -1,3 +1,8 @@
+2006-12-06  Jürg Billeter  <j@bitron.ch>
+
+	* src/nautilus-image-resizer.c: Support scaling by percentage.
+	  Patch by Paul W. Frields <stickster@gmail.com>
+
 2006-01-19  Jürg Billeter  <j@bitron.ch>
 
 	* src/nautilus-image-resizer.c: Remove unnecessary -size argument.
